Reemplaza Collectors.toList por Stream.toList